@@ -153,7 +153,12 @@ Returns metrics for given exporter.
 
 These endpoints are available if the `WEBAdminServer` is enabled in the modules section.
 
-It is best practice to use a separate password for the administrative tasks.
+It is best practice to use a separate password for the administrative tasks, for example:
+
+```ini
+[/settings/WEBAdmin/server]
+password = mysecretadminpassword
+```
 
 ### /api/v1/admin/reload
 
@@ -186,3 +191,22 @@ Example:
 Returns
 
     {"success":true}
+
+### /api/v1/admin/updates/install
+
+Trigger checking for updates.
+
+Example:
+
+    curl \
+        -u user:changeme \
+        -X POST \
+        https://127.0.0.1:8443/api/v1/admin/updates/install
+
+Returns
+
+    {
+        "success":  true,
+        "message": "update found and installed",
+        "version": "v0.27.0024"
+    }
